--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 				<img src="img/sprite.png">
 			</div>
 		</div>
-		<svg class="cable">
-			<path d="M0,40 C600,250 2000,-670 2000,30"></path>
-			<path d="M0,80 C600,200 2000,-400 2000,30"></path>
+		<svg class="cable" id="cable">
+			<path d="M0,40 C600,250 2000,0 2000,30"></path>
+			<path d="M0,80 C600,200 2000,0 2000,30"></path>
 		</svg>
+		<script src="main.js"></script>
 	</body>
 </html>
