--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 	</head>
 	<body>
 		<div class="sprites">
-			<div class="sprite">
-				<img src="img/sprite.png">
-			</div>
+			<div class="sprite"></div>
 		</div>
 		<svg class="cable" id="cable">
 			<path d="M0,40 C600,250 2000,0 2000,30"></path>
