--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 		<link href="main.css" rel="stylesheet">		
 	</head>
 	<body>
-		<div class="sprites">
-			<div class="sprite"></div>
+		<div class="crow-move second">
+			<div class="crow-image"></div> 
+		</div>
+		<div class="crow-move">
+			<div class="crow-image"></div> 
 		</div>
 		<svg class="cable" id="cable">
 			<path d="M0,40 C600,250 2000,0 2000,30"></path>
 			<path d="M0,80 C600,200 2000,0 2000,30"></path>
-		</svg>
+		</svg> 
 		<script src="main.js"></script>
 	</body>
 </html>
