ajustes graficas cuervo a svg

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			<div class="crow-image"></div> 
 		</div>
 		<svg class="cable" id="cable">
-			<path d="M0,40 C600,250 2000,0 2000,30"></path>
-			<path d="M0,80 C600,200 2000,0 2000,30"></path>
+			<path></path>
+			<path></path>
 		</svg> 
 		<script src="main.js"></script>
 	</body>
