--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link href="main.css" rel="stylesheet">		
 	</head>
 	<body>
+		<div class="cloud"></div>
 		<div class="crow-move second">
 			<div class="crow-image"></div> 
 		</div>
